alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -1158,7 +1158,6 @@ body {
   gap: 20px;
   padding: 10px;
   width: 208px;
-  margin: auto;
   
 }
 
@@ -1505,7 +1504,9 @@ body {
   #email{
     text-align: center;
   }
-
+  footer-links{
+    margin: auto;
+  }
   .menu-categories {
     position: relative;
     padding: 15px 0;
